--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Quynh Xuan Nguyen",
+            "name": "Quynh Nguyen",
             "email": "seriquynh@gmail.com"
         }
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": "^8.0",
         "laravel/framework": "^8.77",
         "symfony/dotenv": "^5.4"
     },
