--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
             "email": "seriquynh@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
         "php": "^8.0",
         "laravel/framework": "^8.77",
@@ -18,7 +17,10 @@
     "autoload": {
         "psr-4": {
             "ConfettiCode\\Laravel\\Foundation\\": "src/Foundation/"
-        }
+        },
+        "files": [
+            "helpers.php"
+        ]
     },
     "extra": {
         "laravel": {
@@ -26,5 +28,9 @@
                 "ConfettiCode\\Laravel\\Foundation\\Providers\\FoundationServiceProvider"
             ]
         }
-    }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev"
 }
